--- a/views/configuration-panel/configuration-panel.html
+++ b/views/configuration-panel/configuration-panel.html
@@ -24,7 +24,7 @@
             <h2 class="config-title">Administrar cuentas bancarias</h2>
             <p class="config-description">Gestiona las cuentas bancarias de la empresa.</p>
         </div>
-        <div class="config-card">
+        <div class="config-card" onclick="adjuntarHTML('/configuration-panel/manage-categories.html',0)">
             <span class="material-icons config-icon">category</span>
             <h2 class="config-title">Administrar categorías de productos</h2>
             <p class="config-description">Configura y organiza las categorías de los productos.</p>
