Cambie la ubicación del onclick a la hora de llamar al método de cargarColaboradioresTabla en el configuration-panel

--- a/views/configuration-panel/configuration-panel.html
+++ b/views/configuration-panel/configuration-panel.html
@@ -9,9 +9,9 @@
             <h2 class="config-title">Administrar roles de usuario</h2>
             <p class="config-description">Gestiona los roles y permisos de los usuarios del sistema.</p>
         </div>
-        <div class="config-card">
+        <div class="config-card" onclick="adjuntarHTML('/configuration-panel/manage-collaborators.html', () => cargarColaboradoresTabla())">
             <span class="material-icons config-icon">groups</span>
-            <h2 class="config-title" onclick="adjuntarHTML('/configuration-panel/manage-collaborators.html', () => cargarColaboradoresTabla())">Administrar empleados</h2>
+            <h2 class="config-title">Administrar empleados</h2>
             <p class="config-description">Gestiona la información y los registros de los empleados.</p>
         </div>
         <div class="config-card">
