--- a/public/CSS/dashboard-css/dashboard.css
+++ b/public/CSS/dashboard-css/dashboard.css
@@ -141,7 +141,7 @@ header {
     font-weight: bold;
 }
 
-.add-product-btn, .add-user-btn, .add-supplier-btn {
+.add-product-btn, .add-user-btn, .add-supplier-btn, .add-category-btn {
     background-color: var(--secondary-color);
     color: var(--background-color);
     border: none;
@@ -154,7 +154,7 @@ header {
     justify-content: center;
 }
 
-.add-product-btn:hover, .add-supplier-btn:hover, .add-user-btn:hover {
+.add-product-btn:hover, .add-supplier-btn:hover, .add-user-btn:hover, .add-category-btn:hover {
     background-color: #7a1bd2;
 }
 
@@ -316,7 +316,7 @@ form {
     gap: 10px; /* Espaciado entre los inputs */
 }
 
-input[type="text"], input[type="password"], input[type="tel"], input[type="date"], input[type="email"]{
+input[type="text"], input[type="password"], input[type="tel"], input[type="date"], input[type="email"], textarea{
     padding: 10px;
     border: 2px solid #ccc; /* Color de borde inicial */
     border-radius: 5px; /* Bordes redondeados para los inputs */
@@ -324,7 +324,7 @@ input[type="text"], input[type="password"], input[type="tel"], input[type="date"
     width: 100%; /* Asegura que el input siempre use el 100% del espacio disponible */
 }
 
-input[type="text"]:focus, input[type="password"]:focus, input[type="tel"]:focus, input[type="date"]:focus, input[type="email"]:focus {
+input[type="text"]:focus, input[type="password"]:focus, input[type="tel"]:focus, input[type="date"]:focus, input[type="email"]:focus, textarea:focus {
     border-color: #8a2be2; /* Color de borde al hacer clic */
     outline: none; /* Quitar el contorno */
 }
