Creación del modulo entidad financiera con lectura completa y una corrección de bug en la paginación al filtrar proveedores

--- a/views/configuration-panel/proveedores-admin.html
+++ b/views/configuration-panel/proveedores-admin.html
@@ -7,7 +7,7 @@
         </button>
     </div>
     <div class="search-bar">
-        <input id="search-bar" type="text" placeholder="Buscar colaboradores..." onkeydown="checkEmpty(event)" oninput="checkEmpty(event)">
+        <input id="search-bar" type="text" placeholder="Buscar colaboradores..." onkeydown="checkEmpty(event, 3)" oninput="checkEmpty(event, 3)">
         <button onclick="filterTable(3)" class="search-btn">Buscar</button>
     </div>
     
