--- a/views/configuration-panel/configuration-panel.html
+++ b/views/configuration-panel/configuration-panel.html
@@ -14,7 +14,7 @@
             <h2 class="config-title" onclick="adjuntarHTML('/configuration-panel/manage-collaborators.html', () => cargarColaboradoresTabla())">Administrar empleados</h2>
             <p class="config-description">Gestiona la información y los registros de los empleados.</p>
         </div>
-        <div class="config-card">
+        <div class="config-card" onclick="adjuntarHTML('/configuration-panel/entidades-financieras-admin.html', () => cargarEntidadesFinancierasTabla())">
             <span class="material-icons config-icon">account_balance</span>
             <h2 class="config-title">Administrar entidades financieras</h2>
             <p class="config-description">Configura y gestiona las entidades financieras asociadas.</p>
@@ -29,7 +29,7 @@
             <h2 class="config-title">Administrar categorías de productos</h2>
             <p class="config-description">Configura y organiza las categorías de los productos.</p>
         </div>
-        <div onclick="adjuntarHTML('/configuration-panel/proveedores-admin.html', () => cargarProveedoresTabla())" class="config-card"> <!--a la función del onclick le pase 0, para probar que el HTML si se adunta, pero se le tiene que pasar el nombre de la función que carga los proveedores en la tabla-->
+        <div class="config-card" onclick="adjuntarHTML('/configuration-panel/proveedores-admin.html', () => cargarProveedoresTabla())">
             <span class="material-icons config-icon">local_shipping</span>
             <h2 class="config-title">Administrar proveedores</h2>
             <p class="config-description">Gestiona la información y los registros de los proveedores.</p>
