--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -36,7 +36,7 @@
             </div>
             <button class="menu-item" onclick="adjuntarHTML('/usuarios/usuarios-admin.html', cargarUsuariosTabla)">Administrar usuarios</button>
             <button class="menu-item">Administrar inventario</button>
-            <button class="menu-item">Administrar facturas</button>
+            <button class="menu-item" onclick="adjuntarHTML('/factura-view/factura-admin.html', cargarFacturasTabla)">Administrar facturas</button>
             <button class="menu-item">Administrar salida de productos</button>
             <button class="menu-item">Administrar comprobantes de pago</button>
         </div>
