--- a/views/factura-view/factura-admin.html
+++ b/views/factura-view/factura-admin.html
@@ -5,35 +5,35 @@
     </button>
 </div>
 <div class="search-bar">
-    <input type="text" placeholder="Buscar facturas...">
+    <input id="search-bar" type="text" placeholder="Buscar facturas...">
 </div>
 <div class="filters">
-    <select>
+    <select id="selectPageSize" onchange="filterTable(6)">
         <option>10 por página</option>
         <option>25 por página</option>
         <option>50 por página</option>
     </select>
-    <select >
-        <option>Todos</option>
-        <option>Activas</option>
-        <option>Inactivas</option>
+    <select id="estadoFiltro">
+        <option value="2">Todos</option>
+        <option value="1" selected>Activas</option>
+        <option value="0">Inactivas</option>
     </select>
     <div class="date-range">
-        <input type="date" placeholder="Fecha inicial">
+        <input id="fechaInicialFiltro" type="date" placeholder="Fecha inicial">
         <span>-</span>
-        <input type="date" placeholder="Fecha final">
+        <input id="fechaFinalFiltro" type="date" placeholder="Fecha final">
     </div>
-    <select>
-        <option value="">Filtrar por proveedor</option>
-        <option value="proveedor1">Proveedor 1</option>
-        <option value="proveedor2">Proveedor 2</option>
-        <option value="proveedor3">Proveedor 3</option>
+    <select id="proveedorFiltro" onchange="filterTable(6)">
+        <option value="0">Filtrar por proveedor</option>
+        <option value="1">Proveedor 1</option>
+        <option value="2">Proveedor 2</option>
+        <option value="3">Proveedor 3</option>
     </select>
-    <select>
-        <option value="">Filtrar por comprobante de pago</option>
-        <option value="banco1">Banco 1</option>
-        <option value="banco2">Banco 2</option>
-        <option value="banco3">Banco 3</option>
+    <select id="comprobanteFiltro" onchange="filterTable(6)">
+        <option value="0">Filtrar por comprobante de pago</option>
+        <option value="1">Comprobante 1</option>
+        <option value="2">Comprobante 2</option>
+        <option value="3">Comprobante 3</option>
     </select>
 </div>
 <table>
@@ -51,4 +51,5 @@
     </tbody>
 </table>
 <div class="pagination">
+
 </div>
