14-03-2025 - 00.59 hrs | Listado de productos (sin filtros) funcional. El metodo puede ser llamado para su uso en otras vistas con los parametros pageSize en null y currentPage en null.

--- a/views/configuration-panel/configuration-panel.html
+++ b/views/configuration-panel/configuration-panel.html
@@ -44,6 +44,11 @@
             <h2 class="config-title">Administrar departamentos de trabajo</h2>
             <p class="config-description">Organiza y gestiona los departamentos de la empresa.</p>
         </div>
+        <div class="config-card" onclick="adjuntarHTML('/configuration-panel/productos-admin.html', () => cargarProductosTabla())">
+            <span class="material-icons config-icon">shopping_cart</span>
+            <h2 class="config-title">Administrar productos</h2>
+            <p class="config-description">Gestiona la información y los registros de los productos.</p>
+        </div>
     </div>
 </div>
 </div>
