Edición de factura casi lista

--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -45,6 +45,7 @@
         </div>
     </div>
     <script src="../../public/js/dashboard-js/dashboard.js"></script>
+    <script src="../../public/js/dashboard-js/facturas.js"></script>
 </body>
 
 </html>
