18/03/2025 implementación del listado, tiene errores
falta arreglar los errores y listo

--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -37,7 +37,7 @@
             <button class="menu-item" onclick="adjuntarHTML('/usuarios/usuarios-admin.html', cargarUsuariosTabla)">Administrar usuarios</button>
             <button class="menu-item">Administrar inventario</button>
             <button class="menu-item" onclick="adjuntarHTML('/factura-view/factura-admin.html', cargarFacturasTabla)">Administrar facturas</button>
-            <button class="menu-item" onclick="adjuntarHTML('/salida-producto/salida-producto.html', cargarSalidasProductosTabla)">Administrar salida de productos</button> <button class="menu-item">Administrar comprobantes de pago</button>
+            <button class="menu-item" onclick="adjuntarHTML('/salida-producto/salida-admin.html', cargarSalidasTabla)">Administrar salida de productos</button> <button class="menu-item">Administrar comprobantes de pago</button>
         </div>
         <div id="inner-div" class="main-content">
 
