ING1234-16. Leer todos los productos que se encuentran registrados y filtrarlos por cualquier palabra relacionada, ya sea por nombre o categoría.

--- a/views/configuration-panel/productos-admin.html
+++ b/views/configuration-panel/productos-admin.html
@@ -7,7 +7,7 @@
         </button>
     </div>
     <div class="search-bar">
-        <input id="search-bar" type="text" placeholder="Buscar productos..." onkeypress="filterTable(7)">
+        <input id="search-bar" type="text" placeholder="Buscar productos..." onkeydown="checkEmpty(event, 7)" oninput="checkEmpty(event, 7)">
     </div>
     <div class="filters">
         <select id="selectPageSize" onchange="filterTable(7)">
