--- a/views/configuration-panel/productos-admin.html
+++ b/views/configuration-panel/productos-admin.html
@@ -58,7 +58,7 @@
                 <input type="text" id="descripcion" name="descripcion" required>
 
                 <label for="cantidad">Cantidad:</label>
-                <input type="number" id="cantidad" name="cantidad" min="0" required>
+                <input type="number" id="cantidad" name="cantidad" min="0" value="0" required>
 
                 <label for="unidadMedicion">Unidad medición:</label>
                 <select type="text" id="unidadMedicion" name="unidadMedicion" required>
