Creación de factura listo en el frontend
Se ha creado la vista del formulario para la creación de la factura, además de la función en js que se encarga de validarlo y recolectar toda la información necesaria, ya solo queda trabajar el backend.

--- a/views/factura-view/factura-admin.html
+++ b/views/factura-view/factura-admin.html
@@ -1,7 +1,7 @@
 <div class="content-header">
     <h1 class="content-title">Administrar Facturas</h1>
     <button class="add-invoice-btn" title="Agregar Nueva Factura">
-        <span class="material-icons">add_box</span>
+        <span class="material-icons" onclick="adjuntarHTML('/factura-view/crear-factura.html', cargarVistaCrearFactura)">add_box</span>
     </button>
 </div>
 <div class="search-bar">
