Corregido el que no se permitan ingresar valores negativos en los inputs number
Validación de números negativos lista.

--- a/views/factura-view/crear-factura.html
+++ b/views/factura-view/crear-factura.html
@@ -281,7 +281,7 @@
                         </td>
                         <td>
                             <div class="currency-input">
-                                <input type="number" class="form-control" id="invoice-tax" step="0.01">
+                                <input type="number" class="form-control" id="invoice-tax" step="0.01" value="0.0">
                             </div>
                         </td>
                     </tr>
@@ -289,7 +289,7 @@
                         <td>Descuento (Monto):</td>
                         <td>
                             <div class="currency-input">
-                                <input type="number" class="form-control" id="invoice-discount" step="0.01">
+                                <input type="number" class="form-control" id="invoice-discount" value="0.0" step="0.01">
                             </div>
                         </td>
                     </tr>
